@@ -1,3 +1,6 @@
+### 15-Jan-2016 - PLL -- Version 8.5.1
+    DARKCORR now uses DARKTIME, if available.
+
 ### 27-Jul-2015 - PLL -- Version 8.3.3
     ACSREJ can now process input list of any length (as allowed by memory).
 
